add body params to endpoints
