# docs/api/swagger.json
@@ -78,6 +78,17 @@
                     "groups"
                 ],
                 "summary": "Create a new group",
+                "parameters": [
+                    {
+                        "description": "Group body",
+                        "name": "group",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JSONGroupBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -136,6 +147,17 @@
                     "groups"
                 ],
                 "summary": "Add members to a group",
+                "parameters": [
+                    {
+                        "description": "Group members body",
+                        "name": "members",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GroupMembers"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -186,12 +208,20 @@
                     "groups"
                 ],
                 "summary": "Remove members from a group",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "parameters": [
+                    {
+                        "description": "Group members body",
+                        "name": "members",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserInfo"
+                            "$ref": "#/definitions/models.GroupMembers"
                         }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -310,6 +340,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Group body",
+                        "name": "group",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JSONGroupBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -427,6 +466,17 @@
                     "authentication"
                 ],
                 "summary": "Log in to the API",
+                "parameters": [
+                    {
+                        "description": "Username and password",
+                        "name": "authentication",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.LoginBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -468,6 +518,17 @@
                     "authentication"
                 ],
                 "summary": "Refresh authentication tokens",
+                "parameters": [
+                    {
+                        "description": "Access and Refresh tokens",
+                        "name": "tokens",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Tokens"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -507,6 +568,17 @@
                     "authentication"
                 ],
                 "summary": "Delete authentication tokens",
+                "parameters": [
+                    {
+                        "description": "Access and Refresh tokens",
+                        "name": "tokens",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Tokens"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -582,6 +654,17 @@
                     "users"
                 ],
                 "summary": "Create a new user",
+                "parameters": [
+                    {
+                        "description": "User account body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JSONUserBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -640,6 +723,17 @@
                     "users"
                 ],
                 "summary": "Change user account password",
+                "parameters": [
+                    {
+                        "description": "Password body",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JSONPasswdBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -758,6 +852,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "User account body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.JSONUserBody"
+                        }
                     }
                 ],
                 "responses": {
@@ -866,6 +969,17 @@
                 }
             }
         },
+        "auth.LoginBody": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.Response": {
             "type": "object",
             "properties": {
@@ -886,6 +1000,17 @@
                 }
             }
         },
+        "auth.Tokens": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.GroupInfo": {
             "type": "object",
             "properties": {
@@ -902,6 +1027,83 @@
                     }
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.GroupMembers": {
+            "type": "object",
+            "properties": {
+                "members": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.JSONGroupBody": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "members": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "replace": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.JSONPasswdBody": {
+            "type": "object",
+            "properties": {
+                "old_password": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.JSONUserBody": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "locked": {
+                    "type": "boolean"
+                },
+                "manager": {
+                    "type": "boolean"
+                },
+                "members": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "readonly": {
+                    "type": "boolean"
+                },
+                "remove": {
+                    "type": "boolean"
+                },
+                "replace": {
+                    "type": "boolean"
+                },
+                "ssh_public_key": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
