# server/api/handlers/group_add_members.go
@@ -32,6 +32,7 @@ import (
 // @Tags         groups
 // @Accept       json
 // @Produce      json
+// @Param        members body models.GroupMembers  true  "Group members body"
 // @Success      200  {object}  models.GroupInfo
 // @Failure			 400  {object} api.ErrorResponse
 // @Failure			 401  {object} api.ErrorResponse
