# server/api/handlers/group_create.go
@@ -60,6 +60,7 @@ func (h *Handler) AddMembers(g *models.Group, members []string) error {
 // @Tags         groups
 // @Accept       json
 // @Produce      json
+// @Param        group body models.JSONGroupBody  true  "Group body"
 // @Success      200  {object}  models.GroupInfo
 // @Failure			 400  {object} api.ErrorResponse
 // @Failure			 401  {object} api.ErrorResponse
